# crypto-stream

./: .gitignore  docker-compose.yaml  makefile
crypto-client-producer/: Dockerfile  README.md  pyproject.toml
crypto-client-producer/cryptocom_stream/: cryptocom.py  kafka.py  main.py
crypto-client-producer/tests/: test_cryptocom.py
cryptocom-stream-consumer/: pyproject.toml
cryptocom-stream-consumer/cryptocom_stream_consumer/: main.py
cryptocom-stream-producer/: Dockerfile  README.md  pyproject.toml
cryptocom-stream-producer/cryptocom_stream_producer/: kafka.py  main.py
cryptocom-stream-producer/tests/: test_cryptocom.py  test_kafka.py
