[tool.poetry]
name = "crypto-client-producer"
version = "0.1.0"
description = ""
authors = ["Gerardo Vitale <gerardo.vitale@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^12.0"
python-dotenv = "^1.0.1"
confluent-kafka = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
