[tool.poetry]
name = "cryptocom-stream-producer"
version = "0.1.0"
description = ""
authors = ["Gerardo Vitale <gerardo.vitale@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^12.0"
python-dotenv = "^1.0.1"
confluent-kafka = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
